--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
-      <h3>Welcome to adDict</h3>
-  </body>
+
+<head>
+    <script src="https://www.gstatic.com/firebasejs/6.3.5/firebase.js"></script>
+    <script src="./firebase.js"></script>
+    <script src="popup.js"></script>
+</head>
+
+<body>
+  <h3>Welcome to adDict</h3>
+  <button id="signIn">Sign In</button>
+  <button id="signOut">Sign Out</button>
+
+</body>
+
 </html>
