'Show My Words' func. added

--- a/background.html
+++ b/background.html
@@ -4,8 +4,8 @@
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://www.gstatic.com/firebasejs/6.3.5/firebase.js"></script>
-  <script src="firebase.js"></script>
-  <script src="background.js"></script>
+  <script src="/static/js/firebase.js"></script>
+  <script src="/static/js/background.js"></script>
 
 </head>
 <body>
