--- a/popup.html
+++ b/popup.html
@@ -2,16 +2,17 @@
 <html>
 
 <head>
+  	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/6.3.5/firebase.js"></script>
-    <script src="./firebase.js"></script>
-    <script src="popup.js"></script>
+    <script src="/static/js/firebase.js"></script>
+    <script src="/static/js/popup.js"></script>
 </head>
 
 <body>
-  <h3>Welcome to adDict</h3>
-  <button id="signIn">Sign In</button>
-  <button id="signOut">Sign Out</button>
-
+  <h3 class="display-4">adDict</h3>
+  <button class="btn btn-primary btn-block" id="signIn">Sign In</button>
+  <button class="btn btn-danger btn-block" id="signOut">Sign Out</button>
+  <button class="btn btn-info btn-block" id="showWords">Show My Words</button>
 </body>
 
 </html>
