Template firebase.js added, conf. must be filled

--- a/addWord.html
+++ b/addWord.html
@@ -17,7 +17,7 @@
 			margin-top: 30px;
 		}
 	</style>
-	<script src="firebase.js"></script>
+	<script src="/static/js/firebase.js"></script>
 </head>
 
 <body class="container">
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="addWord.js"></script>
+	<script src="/static/js/addWord.js"></script>
 </body>
 
 </html>
